--- a/package.json
+++ b/package.json
@@ -2,8 +2,11 @@
   "name": "app-6",
   "private": true,
   "version": "0.0.0",
+  "homepage": "https://maii-Ahmed.github.io/BiigBrother",
   "type": "module",
   "scripts": {
+    "predeploy": "npm run build",
+   "deploy": "gh-pages -d dist",
     "dev": "vite",
     "build": "vite build",
     "lint": "eslint .",
@@ -14,6 +17,7 @@
     "@tailwindcss/vite": "^4.0.4",
     "axios": "^1.7.9",
     "formik": "^2.4.6",
+    "gh-pages": "^6.3.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-router-dom": "^7.1.5",
