--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "app-6",
   "private": true,
   "version": "0.0.0",
-  "homepage": "https://maii-Ahmed.github.io/BiigBrother",
+  "homepage": "https://maii-Ahmed.github.io/app6",
   "type": "module",
   "scripts": {
     "predeploy": "npm run build",
